# ComfyUI_Skill_CLI

./: .gitignore  CHANGELOG.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-TW.md  README.zh.md  pyproject.toml
comfyui_skills_cli/: client.py  config.py  error_hints.py  history_writer.py  main.py  output.py  storage.py  update_check.py  utils.py
comfyui_skills_cli/commands/: cancel.py  config.py  deps.py  free.py  history.py  jobs.py  logs.py  models.py  nodes.py  queue.py  run.py  server.py  skill.py  templates.py  upload.py  workflow.py
docs/: cli-roadmap.md
tests/: test_client.py  test_client_new_apis.py  test_error_hints.py  test_jobs.py  test_nodes.py  test_nodes_and_ws.py  test_partial_execution.py  test_run.py  test_server_stats.py  test_update_check.py
